--- a/javascript/style.css
+++ b/javascript/style.css
@@ -1,3 +1,140 @@
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;1,100;1,200;1,300;1,400;1,500;1,600;1,700&display=swap');
+
+body,
+html {
+	font-family: 'Montserrat', sans-serif;
+	padding: 0;
+	margin: 0;
+}
+* {
+	font-family: 'Montserrat', sans-serif;
+	padding: 0;
+	margin: 0;
+	box-sizing: border-box;
+}
+ul,
+li {
+	list-style: none;
+}
 .hidden {
 	display: none;
+}
+.container {
+	position: relative;
+	min-height: 100vh;
+	width: 100%;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	flex-direction: column;
+	padding: 100px 50px;
+}
+
+.background {
+	display: block;
+	width: 100%;
+	height: 100%;
+	object-fit: cover;
+	position: absolute;
+	left: 50%;
+	top: 50%;
+	transform: translate(-50%, -50%);
+	z-index: -1;
+}
+.greeting {
+	font-size: 60px;
+	color: #fff;
+	margin-bottom: 30px;
+}
+.clock {
+	color: #fff;
+	font-size: 60px;
+}
+.weather {
+	margin-top: 20px;
+	font-size: 20px;
+	color: #fff;
+}
+.login-form {
+	display: flex;
+	width: 100%;
+	max-width: 500px;
+	margin-top: 30px;
+}
+.login-form > input {
+	display: block;
+	width: 100%;
+	padding: 0 10px;
+	height: 50px;
+	line-height: 50px;
+	background: rgba(255, 255, 255, 0.7);
+	border: 0;
+	border-radius: 10px;
+	box-shadow: 0 10px 30px rgba(0, 0, 0, 0.2);
+	font-size: 18px;
+}
+.login-form > button {
+	height: 50px;
+	line-height: 48px;
+	padding: 0 10px;
+	margin-left: 10px;
+	background-color: #fff;
+	border: 1px solid #ddd;
+	border-radius: 5px;
+	font-size: 20px;
+	font-weight: 700;
+}
+.todo-form {
+	display: block;
+	margin-top: 30px;
+	width: 100%;
+	max-width: 500px;
+}
+.todo-form input {
+	display: block;
+	width: 100%;
+	padding: 0 10px;
+	height: 50px;
+	line-height: 50px;
+	background: rgba(255, 255, 255, 0.7);
+	border: 0;
+	border-radius: 10px;
+	box-shadow: 0 10px 30px rgba(0, 0, 0, 0.2);
+	font-size: 18px;
+}
+.todo-list {
+	width: 100%;
+	max-width: 500px;
+	font-size: 20px;
+	color: #fff;
+}
+.todo-list > li:first-child {
+	margin-top: 30px;
+}
+.todo-list > li {
+	margin-top: 10px;
+}
+.todo-list li > span {
+	display: inline-block;
+	margin-right: 10px;
+}
+.todo-list li > button {
+	display: inline-block;
+	width: 25px;
+	height: 25px;
+	line-height: 23px;
+	font-size: 15px;
+	color: #000;
+	font-weight: 700;
+	text-align: center;
+	border: 1px solid #ddd;
+	background: #fff;
+	border-radius: 5px;
+}
+.quote {
+	color: #fff;
+	font-size: 16px;
+	position: absolute;
+	left: 20px;
+	bottom: 20px;
 }
