--- a/react-project/src/App.css
+++ b/react-project/src/App.css
@@ -1,7 +1,22 @@
 * {
 	box-sizing: border-box;
 }
-
+ul,
+li {
+	margin: 0;
+}
+a {
+	color: inherit;
+	text-decoration: none;
+}
+.title {
+	font-weight: bold;
+	margin-bottom: 5px;
+}
+.text {
+	color: #737373;
+	font-size: 14px;
+}
 .inner {
 	width: 100%;
 	max-width: 1200px;
@@ -40,12 +55,23 @@
 	border: 1px solid #ddd;
 	padding: 10px 20px;
 	border-radius: 10px;
-	margin-bottom: 10px;
+}
+.btn_wrap {
+	margin-top: 20px;
+}
+.btn_wrap > button {
+	margin-right: 5px;
+}
+.btn_wrap > button:last-child {
+	margin-right: 0;
 }
 .li_style {
 	padding: 0;
 	border: 1px solid #ddd;
 	border-bottom: 0;
+}
+.li_style + .li_style {
+	border-top: 0;
 }
 .li_style > li {
 	list-style: none;
@@ -66,14 +92,11 @@
 	width: 100%;
 	text-align: left;
 }
+
 .li_style > li > div:nth-child(4) {
-	width: 600px;
-	text-align: left;
-}
-.li_style > li > div:nth-child(5) {
 	width: 300px;
 }
-.li_style > li > div:nth-child(6) {
+.li_style > li > div:nth-child(5) {
 	width: 150px;
 }
 
